# tournabot

./: README.md  pyproject.toml  requirements.txt
src/tournabot/: bot.py  config.py  formatters.py  main.py  models.py  smoothcomp.py
src/tournabot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_formatters.py
